@@ -21,6 +21,8 @@ DIST genpatches-3.7-6.base.tar.bz2 139586 SHA256 05ceecd32f808562e762f2bda4d5377
 DIST genpatches-3.7-6.extras.tar.bz2 17039 SHA256 e5d231e11a8443d9301c40b0825d3734888c8004039a22422028750f2ae88f04 SHA512 f02b178fd2a41dfc2340062074237b0a810bd0278f8d0bcbc8c19d5763511d4bb3846e91b4e2a10df54a72005b7e8788210bcfe23af070d57b365db95eff6075 WHIRLPOOL e7056d0e3230716d941b9f81981acd00adf2c9fb001c0f1879f6c8770a773739d5484b2dc45996ced83639bb6a1bfc1c51b7d10650d48db942d347683f82738f
 DIST genpatches-3.7-8.base.tar.bz2 180902 SHA256 cb0a3f7b8268e9c95525c5dbfcfa3e8b89fd0a1f32191760f4edf800a187414d SHA512 01fabb605fdb081e40d6dd38e29ea28f8ba11ad08af8e2ea058e3e7068159daf2c2f8516198bae20c833a1286a33fe426896480035a87788764dbc9169347c27 WHIRLPOOL fc06fe4cf954e0b4b17d4026aaee2e945b2697c70462628b487437538ab2a269c5da8eac319034713270bc381615599368cbe47f777c42499dcc965cdbb1b1d3
 DIST genpatches-3.7-8.extras.tar.bz2 17039 SHA256 e5d231e11a8443d9301c40b0825d3734888c8004039a22422028750f2ae88f04 SHA512 f02b178fd2a41dfc2340062074237b0a810bd0278f8d0bcbc8c19d5763511d4bb3846e91b4e2a10df54a72005b7e8788210bcfe23af070d57b365db95eff6075 WHIRLPOOL e7056d0e3230716d941b9f81981acd00adf2c9fb001c0f1879f6c8770a773739d5484b2dc45996ced83639bb6a1bfc1c51b7d10650d48db942d347683f82738f
+DIST genpatches-3.7-9.base.tar.bz2 190332 SHA256 0c3327edbdb030382cdece6908103899b780e8fe03fa7a54f26b1151e459772a SHA512 29bd1fae09b30ffe4b5ca869795330a1cda391df81596c101a4f7d28e35a9b24ca54c6f3d2dae1cc3e5dcf1c2414488b03177c16764e5290eec12efa1e492ca2 WHIRLPOOL 718c0fe1ae8cc2697b04106694bf5cdb5a1aace911600b62498f038208afc8d6414912f03eb02ddd9be0d1668350f2ca7164e3982c18a97d34116162b25e1366
+DIST genpatches-3.7-9.extras.tar.bz2 17039 SHA256 e5d231e11a8443d9301c40b0825d3734888c8004039a22422028750f2ae88f04 SHA512 f02b178fd2a41dfc2340062074237b0a810bd0278f8d0bcbc8c19d5763511d4bb3846e91b4e2a10df54a72005b7e8788210bcfe23af070d57b365db95eff6075 WHIRLPOOL e7056d0e3230716d941b9f81981acd00adf2c9fb001c0f1879f6c8770a773739d5484b2dc45996ced83639bb6a1bfc1c51b7d10650d48db942d347683f82738f
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.6.tar.bz2 82296001 SHA256 88ae0a20fd39ecae79db0ce8f9397922fae33c8b06a54ed2c883c861126c9771 SHA512 cbaefc2c4c8ab2251c3345b7b2c88d55a49e3468d8b177b05dd6d96a802efa9a052b1a1ecab8b71298bac97f45259516d88253838332b4fdb4307780ebcddce9 WHIRLPOOL e17e3800951f0c3af21015d1a1c99698d0ef70815bd4f131dd60b30baef70d4c255988857533a9a7c058388c2febfcf02d12cde2a7ed46b24fa85aeb260c0251
 DIST linux-3.7.tar.bz2 83671392 SHA256 dc08d87a579fe2918362e6666e503a95a76296419195cb499aa9dd4dbe171a9e SHA512 dad07e23b5d05a1a12092b59ea25c514ff9e89803ecf65b08f09b82aebc511fd06d2a492dea6364c3740a517f0a06a0ddb1c6847658d158205ad88995d69aaf3 WHIRLPOOL 572514032d7d64cc6a2b6ceeae7489e4b3fb48b5b63543d041ad675cd0569549ed88dc9c04ffdf91e78b8424d00b62384af78d7a41b7f399c31c056f0aa0344b
@@ -29,12 +31,13 @@ EBUILD lh-sources-3.7.2.ebuild 2676 SHA256 674b2f91904700f888049594ed2642807c546
 EBUILD lh-sources-3.7.3.ebuild 3036 SHA256 681c8f364061ca7b980ffd79381b22b64ff4032d6923a12696dc796361ff4e84 SHA512 76a8e33aeae365bfe122c46c319c67760fd8f22dcb32778e7002426bc330d0e925a0bf38239b5a28b5037b9e791db20baefbaaa87d97ebb73ce2253c7468c7c7 WHIRLPOOL 88844d1bf4a1d5f0ddbb4ec2d8aa4346df6ea36e3a5496fa6f20086c6ab5066ed28fa737fc067c0bfc0a4bcea9fc4274bc82992f2032d72f721af598588e98af
 EBUILD lh-sources-3.7.4.ebuild 3036 SHA256 93b95cd0b7235070370adcbd6158a3481ea83e9812e4257632fdec4f3e9e1a63 SHA512 10bb21dd27d864930ce7f0fcd20347b3f9d8844e61fd431a4fd3dc7d8efa2ec8cfec40025c2520a7c8bdfef6a6a92a40abe065535e610a7fe3d068987de711ad WHIRLPOOL 06a6973f693b64d40f83ec83d3b18f2aa3ed0537ea97ddec59b0797d2efe286740539ca9d819eb5a861e8a0e57338f877a9e920b1c956abf507895699312fa4a
 EBUILD lh-sources-3.7.6.ebuild 3036 SHA256 c891090c04c9c09803a424e6fb74cb19dba19ba7ae755c4ea11bf97b8fde16c3 SHA512 dc185260db85e92f32560668cede277ed13b9aea0defd9f1a429bcee6c2b0cad951875a73f8fa8b9430fe982f01940039512652feaf271161ae817d3dc560535 WHIRLPOOL 22a0f5165b29bc12240d92aec34d6c5da56290958d9ea97d303b6ff5188a268aaf7154ddafe7cdb165c94e88dbb6b83fc232716c4a83fa19fb349c3af39e0916
-MISC ChangeLog 3833 SHA256 a48cf2cca1dadc67767a57190e94abf38aaba7b1387a10e6b78c62b205c88067 SHA512 12d78a22fcab314a8714ec23f43bd88ed90896800cbb573690c9ee88b28ed4325e7ca78abf5087ef7b2345686feac39f0dd885b0393a085cf4a99e62b27b47bb WHIRLPOOL c48f0c89b5c8cd87bd9fff51a39a9a0a09d461b265c7a65f8c5515151178a4553385d121184c7215bbf649c4f49c680bbb8136df20ac02c75dac139fdd82435b
+EBUILD lh-sources-3.7.7.ebuild 3036 SHA256 6bfaa095b30d69461127e1f75841579bc0da5342a80c117c6936c9bb8f4c31df SHA512 69678becf9554a0affbacda3ae6400f3ab626a37cb869028bc6cc7c40c26900ef509cbb8e73f4101c8a865cc2abefcabac620d52ecec5842aa45278c970c3376 WHIRLPOOL d49a7cc255907aeed64fa63fb607e716a77cb9823ff10ad19c9cd445a45f3d91608aa135b18b592a8ba564366da935cb9e8ef38dbeea74f047e8bc96e27387dc
+MISC ChangeLog 3955 SHA256 f9c0f1dc27079d3ed4eb55d9708c14ba22115313c076f68ffac4c6591c0e1a07 SHA512 803d694f68026b9d31ddb5e6e6b3e47396893a4dd5705214b5c397b934933adbd4c2a483da6894ad249a1b11fd3b6b640bcacc1ee1842f4d7c08b3e96a393bfc WHIRLPOOL 60e5c6e7a72086b46d8f4747baa5fa18fab693a5c37bb85371ebd8d97db928cd509de95152c478e1f4ee016f4c7ccddec936b866be52323ad86cf226aebdca9a
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlETYWQACgkQgAnW8HDreRaIdQCgiZFU+Gst5F/4VcTprGrEwXwB
-L58An2gG9Bu2pWZLeCdY4JhfVi1QLkF6
-=7EVw
+iEYEAREKAAYFAlEbUZUACgkQgAnW8HDreRbwmgCeIOtLP0fyiAaGvsQXhr50EJZx
+7MoAoIvUEgyinhMsXPGK6uvYSpT8wcXJ
+=89CR
 -----END PGP SIGNATURE-----
